# gsdk-cmake-example

./: CMakeLists.txt  README.md  megadrive.cmake
boot/: sega.s
src/: main.c
